--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<link rel="stylesheet" href="css/bootstrap-reboot.min.css">
 	<link rel="stylesheet" href="css/bootstrap-grid.min.css">
 	<link rel="stylesheet" href="css/Font.css">
-	<link rel="stylesheet" href="../src/css/Style.min.css">
+	<link rel="stylesheet" href="css/Style.min.css">
    
 </head>
 <body>
