--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Uber</title>
-	<link rel="shortcut icon" href="../src/icons/favicon.ico" type="image/x-icon">
+	<link rel="shortcut icon" href="icons/favicon.ico" type="image/x-icon">
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="css/bootstrap-reboot.min.css">
@@ -200,7 +200,7 @@
 			<div class="description_title"><h3>выбор-отличная штука</h3></div>
 		</div>
 <div class="choese">
-	<img src="../src/img/car.png" class="choese_car" alt="car">
+	<img src="img/car.png" class="choese_car" alt="car">
 </div>
 <div class="choese_text">
 	<div class="choese_headtext">
