--- a/index.html
+++ b/index.html
@@ -307,10 +307,10 @@
 		</div>
 		<div class="contacts_oneline">
 			<div class="contacts_social">
-				<a href="#"><div class="contacts_icons"><span class="icon-facebook"></span></div></a>
-				<a href="#"><div class="contacts_icons"><span class="icon-twitter"></span></div></a>
-				<a href="#"><div class="contacts_icons"><span class="icon-linkedin"></span></div></a>
-				<a href="#"><div class="contacts_icons"><span class="icon-instagram"></span></div></a>
+				<a href="https://www.facebook.com"><div class="contacts_icons"><span class="icon-facebook"></span></div></a>
+				<a href="https://twitter.com"><div class="contacts_icons"><span class="icon-twitter"></span></div></a>
+				<a href="https://www.linkedin.com"><div class="contacts_icons"><span class="icon-linkedin"></span></div></a>
+				<a href="https://www.instagram.com"><div class="contacts_icons"><span class="icon-instagram"></span></div></a>
 			</div>
 			<div class="contacts_gaps">
 			<a href="#"><img src="img/google_play.png" alt="google_play"></a>
