--- a/index.html
+++ b/index.html
@@ -1,325 +1,110 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Uber</title>
-	<link rel="shortcut icon" href="icons/favicon.ico" type="image/x-icon">
-	<link rel="preconnect" href="https://fonts.gstatic.com">
-	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
-	<link rel="stylesheet" href="css/bootstrap-reboot.min.css">
-	<link rel="stylesheet" href="css/bootstrap-grid.min.css">
-	<link rel="stylesheet" href="css/Font.css">
-	<link rel="stylesheet" href="css/Style.min.css">
-   
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Pulse</title>
+    <link rel="stylesheet" href="src/css/Style.min.css">
+    <link rel="stylesheet" href="css/bootstrap-reboot.css">
+    <link rel="stylesheet" href="css/font.css">   
 </head>
 <body>
-	<header>
-			<nav>
-				<div class="container">
-			  <ul class="menu menu_actie">
-				  <li class="menu_item"><a href="#" class="menu_link">Главная</a></li>
-				  <li class="menu_item"><a href="#works" class="menu_link">Со своим автомобилем</a></li>
-				  <li class="menu_item"><a href="#works" class="menu_link">На автомобиле компании</a></li>
-				  <li class="menu_item"><a href="#require" class="menu_link">Требования</a></li>
-				  <li class="menu_item"><a href="#" class="menu_link">Контакты</a></li>
-				  <li class="menu_item"><a href="#" class="menu_link">Оставить заявку</a></li>
-			  </ul>
-			</div>
-			<div class="hamburger">
-				<span></span>
-				<span></span>
-				<span></span>
-			</div>
-			</nav>
-			<div class="subheader">
-				<div class="container">
-				  <div class="row">
-					<div class="col-6 col-md-4 offset-md-1">
-					  <a class="subheader_logo" href="#"><img src="icons/logo.png" alt="logotype"></a>
-					  <div class="subheader_official">Официальный прартнер Uber в Москве</div>
-					</div>
-					<div class="xs-hidden  col-md-3 offset-md-1 col-xl-2 offset-xl-2">
-					<div class="subheader_call">Звоните нам ежедневно</div>
-					<a href="tel:+784957970988" class="subheader_phone">8 495 797 09 88</a>
-					</div>
-					<div class="col-6 col-md-3 col-lg-3">
-						<a href="tel:+784957970988" class="xs-visible subheader_phone">8 495 797 09 88</a>
-						<button class="subheader_bth">Заказать звонок</button>
-					</div>
-				  </div>
-				</div>
-			</div>
-	</header>
- <section class="promo">
-	 <div class="container">
-		 <div class="row">
-			 <div class=" col-md-10 offset-md-1 col-lg-10 offset-lg-1">
-				 <h1 class="promo_header">Компания Uber Partners!</h1>
-				 <h2 class="promo_subheader">Приглашаем водителей! На своем Авто!</h2>
-				 <div class="promo_descr">Компания Uber динамически развевающаяся. Компания на рынке занимает лидируещее место среди таксомоторных компаний, Компания абсолютно прозрачная вы можете контролировать все процессы у себя в личном кабинете. Бонусная система. Помимо выполненой работы по заказам, компания начисляет бонусы за пиковое время.
-					 <br><br>
-					Мы один из партнеров и зарекомендовали себя как одна из лучших команд в городе Москве. Водители у нас
-				зарабатывают от 80000 - 120000 в месяц</div>
-				<button class="promo_btn">Отправить заявку!</button>
-			 </div>
-		 </div>
-	 </div>
- </section>
-<section class="works" id="works">
-	<div class="container">
-		<div class="row">
-			  <div class="col-md-7 offset-md-2">
-				<div class="label">Преимущества
-				</div>
-				<h3 class="work">8 причин начать работать с нами</h3>
-			  </div>
-			<div class="col-md-12">
-				<div class="col-6 col-sm-11 col-md-6 col-lg-6 ">
-					<div class="blue_sphere"><img src="icons/reason/reason_1.png" alt="card" ></div>
-					<div class="desc_first">
-						<div class="header_blue">
-							Никаких наличных, оплата происходит автоматически
-						</div>
-						Стоимость поездки оплачивается пасажиром с привязаной банковской карты, т.е. нет никаких рисков связаных с перевозкой наличности как для пассажира, так и для водителя, Вам не нужно искать мелкие деньги для размена.
-					</div>
-					<div class="blue_spheretoo" ><img src="icons/reason/reason_3.png" alt="money" ></div>
-					<div class="desc_first">
-						<div class="header_blue">
-							Высокий доход с гарантироваными выплатами
-						</div>
-						Мы выплачиваем заработную плату на личную банковскую карту водителя! Вам не нужно оформлять ООО, ИП, платить налоги, подавать декларацию, оплачивать бухгалтерские услуги, и  ведение банковского счета.
-					</div>
-					<div class="blue_spheretree"><img src="icons/reason/reason_5.png" alt="keys" ></div>
-					<div class="desc_first">
-						<div class="header_blue">
-							Комфортное, прозрачное и простое подключение
-						</div>
-						Мы подключаем дистанционно и бесплатно, Вам нет необходимости приезжать к нам! Вы присылаете нам копии документов, мы регистрируем Вас и присылаем данные для подключения, через 1-2 дня Вы можете начинать работать!
-					</div>
-					<div class="blue_spherefore"><img src="icons/reason/reason_7.png" alt="phone" ></div>
-					<div class="desc_firstLast">
-						<div class="header_blue">
-							Круглосуточная поддержка
-						</div>
-						В Uber действует круглосуточная поддержка водителей по электронной почте. Если что-то непонятно, Вы всегда можете задать вопрос через On-line консультацию.
-					</div>
-				</div>
-				<div class="col-6 col-sm-11 col-md-6 col-lg-6 ">
-	<div class="blue_spherefive"><img src="icons/reason/reason_2.png" alt="graphic"></div>
-	<div class="desc_second">
-		<div class="header_blue">
-			Комиссия 8% + БОНУСЫ
-		</div>
-	   У нас минимальная комиссия и мы выплачива- ем бонусы за каждую поездку, некоторые наши конкуренты оставляют бонусы себе. Мы работа- ем честно и с нами водители зарабатывают больше! 
-	</div>
-	<div class="blue_spheresix"><img src="icons/reason/reason_4.png" alt="calendar"></div>
-	<div class="desc_second">
-		<div class="header_blue">
-			Работа в удобное время, никаких графиков
-		</div>
-	   Вы просто нажимаете кнопку выйти на линию для начала работы, когда решите закончить, нажимаете выйти с линии. Вы можете подраба- тывать не только утром, вечером, а и в выходные или праздничные дни!
-	</div>
-	<div class="blue_sphereseven"><img src="icons/reason/reason_6.png" alt="map"></div>
-	<div class="desc_second">
-		<div class="header_blue">
-			Всегда большое количество заказов
-		</div>
-	  Приложение показывает, где на даный момент больше всего заказов и где действуют повышен- ные тарифы. У Вас не будет постоя или холостых пробегов. Наши пассажири всегда приятные и абсолютно не конфликтные люди, которых при- ятно возить.
-	</div>
-	<div class="blue_sphereeight"><img src="icons/reason/reason_8.png" alt="car"></div>
-	<div class="desc_last">
-		<div class="header_blue">
-			Без шашек и наклеек
-		</div>
-	  Вам не нужно менять цвет, устанавливать "шашки" на автомобиль и обклеивать его наклейками.
-	</div>
-				</div>
-			</div>
-		</div>
-	</div>
-</section>
-<section class="mobile">
-	<div class="container">
-	  <div class="label">Возможности</div>
-	  <div class="title"><h3>мобильное приложение убер</h3></div>
-	  <div class="subtitle">Сделайте заказ, совершите поездку и оплатите ее стоимость, используя свой мобильный телефон</div>
-	  <div class="row">
-		  <div class="col-12 col-sm-6 col-md-4">
-			  <div class="mobile_item mobile_item_1">
-				  <div class="mobile_item_subtitle">
-					  оформление заказа одним касанием</div>
-				  <div class="mobile_item_plus"></div>
-			  </div>
-		  </div>
-		  <div class=" col-sm-6 col-md-4">
-			  <div class="mobile_item mobile_item_2">
-				  <div class="mobile_item_subtitle">
-					  надежная подача</div>
-				  <div class="mobile_item_plus"></div>
-			  </div>
-		  </div>
-		  <div class=" col-sm-6 col-md-4">
-			  <div class="mobile_item mobile_item_3">
-				  <div class="mobile_item_subtitle">
-					  прозрачные цены</div>
-				  <div class="mobile_item_plus"></div>
-			  </div>
-		  </div>
-		  <div class=" col-sm-6 col-md-4">
-			  <div class="mobile_item mobile_item_4">
-				  <div class="mobile_item_subtitle">
-					  безналичная оплата</div>
-				  <div class="mobile_item_plus"></div>
-			  </div>
-		  </div>
-		  <div class=" col-sm-6 col-md-4">
-			  <div class="mobile_item mobile_item_5">
-				  <div class="mobile_item_subtitle">
-					  обратная связь</div>
-				  <div class="mobile_item_plus"></div>
-			  </div>
-		  </div>
-		  <div class=" col-sm-6 col-md-4">
-			  <div class="mobile_item mobile_item_6">
-				  <div class="mobile_item_subtitle">
-					  разделить стоимость поездки
-				  </div>
-				  <div class="mobile_item_plus"></div>
-			  </div>
-		  </div>
-	  </div>
-	</div>
-</section>
-<section class="about">
-		<div class="about_img">
-	</div>
-	<div class="container">
-		<div class="description">
-			<div class="description_label">Возможности</div>
-			<div class="description_title"><h3>выбор-отличная штука</h3></div>
-		</div>
-<div class="choese">
-	<img src="img/car.png" class="choese_car" alt="car">
+<div class="promo">
+    <div class="container">
+        <header class="header" >
+            <a href="#" class="header__logo">
+                <img src="src/icons/running-man-2-64.png" alt="logotype">
+            </a>
+        <div class="header__official">
+                Официальный представитель
+                <span>Garmin, Polar, Suunto</span>
+        </div>
+        <div class="header__contacts">
+            <a href="tel:+74499228974" class="header__phone">+7(449)922-89-74</a>
+            <button class="button">Заказать звонок</button>
+        </div>
+        </header>
+        <div class="promo__wrapper">
+            <h1 class="promo__header">Подбор пульсометра</h1>
+            <h2 class="promo__subheader">с учётом Вашего уровня подготовки</h2>
+
+            <div class="promo__icons">
+                <div class="promo__icon">
+                    <img src="src/icons/019_timer_time_stopwatch_2-64.png" alt="icon">
+                    Время подбора:
+                    10 минут
+                </div>
+                <div class="promo__icon">
+                    <img src="src/icons/app-08-hand-cart-64.png" alt="icon">
+                    Бесплатная
+                    доставка                    
+                </div>
+                <div class="promo__icon">
+                    <img src="src/icons/messages-64.png" alt="icon">
+                    Ответим
+                    на все вопросы
+                </div>
+            </div>
+                <button class="button button_main">заказать кОНСУЛЬТАЦИЮ</button>
+                <div class="promo__link">
+                    или
+                    <a href="#">ПЕРЕЙТИ В КАТАЛОГ</a>
+                </div>
+        </div>
+        
+    </div>
 </div>
-<div class="choese_text">
-	<div class="choese_headtext">
-		Машины на каждый день.
-	</div>
-	<div class="choese_lasttext">
-		Лучше, быстрее и дешевле, чем такси
-	</div>
-	</div>
-	</div>
-</section>
-<section class="require"  id="require">
-	<div class="container">
-		<div class="label">Возможности</div>
-		<div class="title"><h3>условия и требования</h3></div>
-	<div class="row">
-		<div class="col-md-6">
-			<div class="require_block ">
-				<div class="require_title">
-					УСЛОВИЯ: со своим авто:
-				</div>
-				<ul class="require_list">
-					<li>Подключаем к системе UBER под 10%.</li>
-					<li>Ни каких взносов 0%!</li>
-					<li>Можем подключать удаленно без приезда в офис</li>
-					<li>ИП не требуется</li>
-					<li>Заказы распределяются без учета рейтинга ближай-<br>шим водителям</li>
-					<li>Работа только по безналичному расчету</li>
-					<li>Деньги перечисляем на карту водителю или наличны-<br>ми в офисе</li>
-				</ul>
-				<div class="require_descr">
-					В день заработок составляет 7000-12000 + бонус 3000т рублей
-				</div>
-			</div>
-		</div>
-		<div class="col-md-6">
-			<div class="require_block ">
-				<div class="require_title">
-					УСЛОВИЯ: на авто компании:
-				</div>
-				<ul class="require_list">
-					<li>Предоставляем авто без залога</li>
-					<li>Без ежедневных выплат по аренде</li>
-					<li>Среда пятница и суббота работа на компанию осталь-<br>ные дни вы работаете на себя</li>
-				</ul>
-			</div>
-		</div>
-		<div class="col-md-6">
-			<div class="require_block require_block_nbm warning">
-				<div class="require_title">
-					ТРЕБОВАНИЕ:
-				</div>
-				<ul class="require_list">
-					<li>Наличие автомобиля без рекламы</li>
-					<li>Автомобиль не должен быть желтый и не с желтыми номерами</li>
-					<li>Машина не старше 3 лет</li>
-					<li>Стаж вождения не менее 3 лет</li>
-					<li>Девайс на системе андроид 4.0 и више(самсунг)</li>
-				</ul>
-			</div>
-		</div>
-		<div class="col-md-6">
-			<div class="require_block require_block_nbm warning">
-				<div class="require_title">
-					ДОКУМЕНТЫ:
-				</div>
-				<ul class="require_list">
-					<li>Права 2 стороны</li>
-					<li>Паспорт лицевая сторона</li>
-					<li>СтС</li>
-					<li>Лицензия (если есть)</li>
-					<li>Номер телефона</li>
-					<li>Номер карты для перечисления денег(указать в письме)!</li>
-				</ul>
-			</div>
-		</div>
-	</div>
-	</div>
-</section>
-<section class="last">
-<div class="container">
-	<div class="label speciallabel">города</div>
-	<div class="title specialtitle"><h3>по всему миру</h3></div>
-	<a href="#"><div class="cities">Посмотреть все города</div></a>
+<div class="advantages">
+    <h2>НАШИ ПРЕИМУЩЕСТВА</h2>
+    <div class="advantages__icons">
+
+        <div class="advantages__icon">
+            <img src="src/icons/cup.png" alt="icon">
+        <span>
+            Делимся опытом
+        </span>
+        Наши сотрудники всегда готовы поделиться своим опытом, 
+        так как сами бегают полумарафоны, переплыли Босфор, готовятся к соревнованиям по триатлону!
+        </div>
+
+        <div class="advantages__icon">
+            <img src="src/icons/heart.png" alt="icon">
+        <span>
+            Заботимся о здоровье
+        </span>
+        Мы работаем для того, 
+        чтобы Ваши занятия спортом шли на пользу Вашему здоровью и были в радость Вам и Вашим близким!    
+        </div>
+        <div class="advantages__icon">
+            <img src="src/icons/shoe.png" alt="icon">
+        <span>
+            Учим бегать
+        </span>
+        Помогаем с обучением 
+        правильной технике бега! 
+        Дружим с крупнейшей школой бега в России - <span class="red">I LOVE RUNNING.</span>    
+        </div>
+        
+    </div>
+   
 </div>
-</section>
-<footer class="contacts">
-	<div class="container">
-		<div class="contacts_devider">
-		</div>
-	  <div class="contacts_link ">
-		  <a class="contacts_alltext" href="#">на главную</a>
-		  <a class="contacts_alltext" href="#">города</a>
-		  <a class="contacts_alltext" href="#">для водителей</a>
-	  </div>
-	  <div class="contacts_lastlink">
-		  <a href="#"><div class="contacts_lasttext">центр поддержки</div></a>
-		  <a href="#"><div class="contacts_lasttext">вакансии</div></a>
-		  <a href="#"><div class="contacts_lasttext">разработчики</div></a>
-		  <a href="#"><div class="contacts_lasttext">блог</div></a>
-		  <a href="#"><div class="contacts_lasttext">о нас</div></a>
-	  </div>
-	  <a href="#"><div class="lang">русский</div></a>
-		</div>
-		<div class="contacts_oneline">
-			<div class="contacts_social">
-				<a href="https://www.facebook.com"><div class="contacts_icons"><span class="icon-facebook"></span></div></a>
-				<a href="https://twitter.com"><div class="contacts_icons"><span class="icon-twitter"></span></div></a>
-				<a href="https://www.linkedin.com"><div class="contacts_icons"><span class="icon-linkedin"></span></div></a>
-				<a href="https://www.instagram.com"><div class="contacts_icons"><span class="icon-instagram"></span></div></a>
-			</div>
-			<div class="contacts_gaps">
-			<a href="#"><img src="img/google_play.png" alt="google_play"></a>
-			<a href="#"><img src="img/windows_store.png" alt="windows_store"></a>
-			<a href="#"><img src="img/app_store.png" alt="app_store"></a>
-		</div>
-	</div>
-		<div class="contacts_black"></div>
-</footer>
-<script src="js/script.js"></script>
+<div class="consultation">
+    <div class="container">
+        <h2 class="title title_left">
+            Получите бесплатную консультацию <br>
+            по подбору пульсометра 
+        </h2>
+        <div class="consultation__desc">
+            Просто заполните форму заявки <br> 
+            и мы перезвоним вам в течении 10 минут
+        </div>
+        <form class="feed-form" action="#">
+            <input name="name" required placeholder="Ваше имя" type="text">
+            <input name="phone" required placeholder="Ваш телефон" type="number">
+            <input name="email" required placeholder="Ваше E-mail" type="email">
+           <button class="button button_submit">заказать кОНСУЛЬТАЦИЮ</button>
+        </form>
+    </div>
+</div>
 </body>
 </html>
