--- a/Site WordPress/index.html
+++ b/Site WordPress/index.html
@@ -28,7 +28,7 @@
         <button class="promo_btn">записатся на интенсив!</button>
         <div class="more">
             <div class="more_text">узанть больше об интенсиве</div>
-            <img src="src/icons/Rounded Rectangle 1 copy 2.png" alt="" class="more_img">
+            <img src="icons/Rounded Rectangle 1 copy 2.png" alt="" class="more_img">
         </div>
         </div>
     </section>
