--- a/Site WordPress/index.html
+++ b/Site WordPress/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" class="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;700;900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="C:\Users\Администратор\Desktop\Site WordPress\src\css\Style.css">
+    <link rel="stylesheet" href="Style.css">
 </head>
 <body>
     <section class="promo">
@@ -28,7 +28,7 @@
         <button class="promo_btn">записатся на интенсив!</button>
         <div class="more">
             <div class="more_text">узанть больше об интенсиве</div>
-            <img src="icons/Rounded Rectangle 1 copy 2.png" alt="" class="more_img">
+            <img src="src/icons/Rounded Rectangle 1 copy 2.png" alt="" class="more_img">
         </div>
         </div>
     </section>
