--- a/Puls/index.html
+++ b/Puls/index.html
@@ -6,12 +6,14 @@
     <title>Privacy policy</title>
 </head>
 <body>
-Политика конфиденциальности
+<h1>Политика конфиденциальности</h1>
 
-Мы уважаем вашу конфиденциальность. Приложение не собирает, не хранит и не передает никакие персональные данные пользователей.
+<div>Мы уважаем вашу конфиденциальность.</div>
+<div>Приложение не собирает, не хранит и не передает никакие персональные данные пользователей.</div>
 Все данные, создаваемые приложением, хранятся только на устройстве пользователя и не передаются третьим лицам.
 
 Если у вас есть вопросы, напишите на <a>vodobude@gmail.com</a>
 </body>
 </html>
+
 
